# task-runner

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/myapp/: main.py  worker.py
tests/: test_smoke.py  test_task.py
workflows/: ci.yml
